examples/test/testpolicy15206.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15206
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key0: value34
      key37: value4
      key21: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value29
          key17: value36
      podSelector:
        matchLabels:
          key47: value26
